# YuLang

./: .clang-format  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  toolchain.mk
.github/workflows/: build-test.yml
examples/: array.yu  array_test.yu  hashmap_test.yu  io_test.yu  natural.yu  queue_test.yu  rand.yu  reduce.yu  stack_test.yu  strings.yu
lib/: dynarray.yu  hashmap.yu  io.yu  queue.yu  range.yu  stack.yu  strview.yu
lib/sys/: ctype.yu  math.yu  stdlib.yu  string.yu  unistd.yu
src/: main.cpp  version.h
src/back/: code.h  codegen.cpp  codegen.h  genir.cpp  ir.h  irbuilder.h
src/back/llvm/: builder.cpp  builder.h  define.h  generator.cpp  generator.h  ir.h  objgen.cpp  objgen.h
src/define/: ast.cpp  ast.h  symbol.h  token.h  type.cpp  type.h
src/front/: analyzer.cpp  analyzer.h  eval.cpp  eval.h  lexer.cpp  lexer.h  lexman.cpp  lexman.h  logger.cpp  logger.h  parser.cpp  parser.h  sema.cpp
src/mid/: genir.cpp  irbuilder.cpp  irbuilder.h  irgen.h  module.cpp  module.h  pass.cpp  pass.h  passman.cpp  passman.h  ssa.cpp  ssa.h  usedef.cpp  usedef.h
src/mid/passes/: blkmerge.cpp  dce.cpp
utils/: run_test.sh
utils/input/: io_test.in
utils/output/: array_test.out  hashmap_test.out  io_test.out  natural.out  reduce.out  stack_test.out  strings.out
